fix org item overflow

--- a/console/src/app/pages/orgs/org-grid/org-grid.component.scss
+++ b/console/src/app/pages/orgs/org-grid/org-grid.component.scss
@@ -38,6 +38,7 @@ h1 {
         flex-basis: 230px;
         display: flex;
         text-decoration: none;
+        overflow: hidden;
         cursor: pointer;
         padding-top: 0;
         padding-right: 0;
